parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    URL

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> DOCTYPE gen_article
Rule 2     gen_article -> OPEN_ARTICLE gen_allart CLOSE_ARTICLE
Rule 3     gen_allart -> gen_info gen_titl gen_data gen_secciones
Rule 4     gen_allart -> gen_info gen_data gen_secciones
Rule 5     gen_allart -> gen_titl gen_data gen_secciones
Rule 6     gen_allart -> gen_data gen_secciones
Rule 7     gen_allart -> gen_titl gen_data
Rule 8     gen_allart -> gen_data
Rule 9     gen_allart -> gen_info gen_data
Rule 10    gen_data -> gen_list
Rule 11    gen_data -> gen_important
Rule 12    gen_data -> gen_para
Rule 13    gen_data -> gen_simp
Rule 14    gen_data -> adr
Rule 15    gen_data -> mo
Rule 16    gen_data -> gen_table
Rule 17    gen_data -> gen_com
Rule 18    gen_data -> gen_abs
Rule 19    gen_data -> gen_list gen_data
Rule 20    gen_data -> gen_important gen_data
Rule 21    gen_data -> gen_para gen_data
Rule 22    gen_data -> gen_simp gen_data
Rule 23    gen_data -> adr gen_data
Rule 24    gen_data -> mo gen_data
Rule 25    gen_data -> gen_table gen_data
Rule 26    gen_data -> gen_com gen_data
Rule 27    gen_data -> gen_abs gen_data
Rule 28    gen_secciones -> gen_section gen_secciones
Rule 29    gen_secciones -> gen_simpsec gen_secciones
Rule 30    gen_secciones -> gen_section
Rule 31    gen_secciones -> gen_simpsec
Rule 32    gen_section -> OPEN_SECTION gen_allart CLOSE_SECTION
Rule 33    gen_simpsec -> OPEN_SIMPLE_SECTION simpsec CLOSE_SIMPLE_SECTION
Rule 34    simpsec -> gen_info gen_titl gen_data
Rule 35    simpsec -> gen_info gen_data
Rule 36    simpsec -> gen_data gen_secciones
Rule 37    simpsec -> gen_titl gen_data
Rule 38    simpsec -> gen_data
Rule 39    gen_info -> OPEN_INFO info CLOSE_INFO
Rule 40    info -> mo
Rule 41    info -> gen_abs
Rule 42    info -> adr
Rule 43    info -> gen_aut
Rule 44    info -> gen_date
Rule 45    info -> gen_copy
Rule 46    info -> gen_titl
Rule 47    info -> mo info
Rule 48    info -> gen_abs info
Rule 49    info -> adr info
Rule 50    info -> gen_aut info
Rule 51    info -> gen_date info
Rule 52    info -> gen_copy info
Rule 53    info -> gen_titl info
Rule 54    gen_abs -> OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
Rule 55    gen_abs -> OPEN_ABSTRACT infoab CLOSE_ABSTRACT
Rule 56    infoab -> gen_para
Rule 57    infoab -> gen_simp
Rule 58    infoab -> gen_para infoab
Rule 59    infoab -> gen_simp infoab
Rule 60    adr -> OPEN_ADDRESS genad CLOSE_ADDRESS
Rule 61    adr -> OPEN_ADDRESS imprimir CLOSE_ADDRESS
Rule 62    genad -> gen_street
Rule 63    genad -> gen_state
Rule 64    genad -> gen_city
Rule 65    genad -> gen_phone
Rule 66    genad -> gen_email
Rule 67    genad -> imprimir
Rule 68    genad -> gen_street genad
Rule 69    genad -> gen_state genad
Rule 70    genad -> gen_city genad
Rule 71    genad -> gen_phone genad
Rule 72    genad -> gen_email genad
Rule 73    genad -> imprimir genad
Rule 74    imprimir -> TEXTO
Rule 75    gen_aut -> OPEN_AUTHOR aut CLOSE_AUTHOR
Rule 76    aut -> gen_firstn
Rule 77    aut -> gen_surn
Rule 78    aut -> gen_firstn aut
Rule 79    aut -> gen_surn aut
Rule 80    gen_copy -> OPEN_COPYRIGHT copy CLOSE_COPYRIGHT
Rule 81    copy -> gen_year
Rule 82    copy -> gen_year gen_holder
Rule 83    gen_firstn -> OPEN_FIRST_NAME genall CLOSE_FIRST_NAME
Rule 84    gen_surn -> OPEN_SURNAME genall CLOSE_SURNAME
Rule 85    gen_street -> OPEN_STREET genall CLOSE_STREET
Rule 86    gen_city -> OPEN_CITY genall CLOSE_CITY
Rule 87    gen_state -> OPEN_STATE genall CLOSE_STATE
Rule 88    gen_phone -> OPEN_PHONE genall CLOSE_PHONE
Rule 89    gen_email -> OPEN_EMAIL genall CLOSE_EMAIL
Rule 90    gen_date -> OPEN_DATE genall CLOSE_DATE
Rule 91    gen_year -> OPEN_YEAR genall CLOSE_YEAR
Rule 92    gen_holder -> OPEN_HOLDER genall CLOSE_HOLDER
Rule 93    genall -> TEXTO
Rule 94    genall -> gen_link
Rule 95    genall -> gen_emp
Rule 96    genall -> gen_com
Rule 97    genall -> TEXTO genall
Rule 98    genall -> gen_link genall
Rule 99    genall -> gen_emp genall
Rule 100   genall -> gen_com genall
Rule 101   gen_titl -> OPEN_TITLE cont_tit CLOSE_TITLE
Rule 102   cont_tit -> TEXTO
Rule 103   cont_tit -> gen_emp
Rule 104   cont_tit -> gen_link
Rule 105   cont_tit -> gen_email
Rule 106   cont_tit -> TEXTO cont_tit
Rule 107   cont_tit -> gen_emp cont_tit
Rule 108   cont_tit -> gen_email cont_tit
Rule 109   cont_tit -> gen_link cont_tit
Rule 110   gen_simp -> OPEN_SIMPARA conex CLOSE_SIMPARA
Rule 111   gen_emp -> OPEN_EMPHASIS conex CLOSE_EMPHASIS
Rule 112   gen_link -> OPEN_LINK conex CLOSE_LINK
Rule 113   gen_com -> OPEN_COMMENT conex CLOSE_COMMENT
Rule 114   conex -> TEXTO
Rule 115   conex -> gen_emp
Rule 116   conex -> gen_link
Rule 117   conex -> gen_email
Rule 118   conex -> gen_aut
Rule 119   conex -> gen_com
Rule 120   conex -> gen_emp conex
Rule 121   conex -> TEXTO conex
Rule 122   conex -> gen_link conex
Rule 123   conex -> gen_email conex
Rule 124   conex -> gen_aut conex
Rule 125   conex -> gen_com conex
Rule 126   gen_para -> OPEN_PARA op_para CLOSE_PARA
Rule 127   op_para -> TEXTO
Rule 128   op_para -> gen_link
Rule 129   op_para -> gen_emp
Rule 130   op_para -> gen_email
Rule 131   op_para -> gen_aut
Rule 132   op_para -> gen_com
Rule 133   op_para -> gen_list
Rule 134   op_para -> gen_important
Rule 135   op_para -> adr
Rule 136   op_para -> mo
Rule 137   op_para -> gen_table
Rule 138   op_para -> TEXTO op_para
Rule 139   op_para -> gen_link op_para
Rule 140   op_para -> gen_emp op_para
Rule 141   op_para -> gen_email op_para
Rule 142   op_para -> gen_aut op_para
Rule 143   op_para -> gen_com op_para
Rule 144   op_para -> gen_list op_para
Rule 145   op_para -> gen_important op_para
Rule 146   op_para -> adr op_para
Rule 147   op_para -> mo op_para
Rule 148   op_para -> gen_table op_para
Rule 149   gen_important -> OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
Rule 150   gen_important -> OPEN_IMPORTANT important CLOSE_IMPORTANT
Rule 151   important -> gen_list
Rule 152   important -> gen_important
Rule 153   important -> gen_para
Rule 154   important -> gen_simp
Rule 155   important -> adr
Rule 156   important -> mo
Rule 157   important -> gen_table
Rule 158   important -> gen_com
Rule 159   important -> gen_abs
Rule 160   important -> gen_list important
Rule 161   important -> gen_important important
Rule 162   important -> gen_para important
Rule 163   important -> gen_simp important
Rule 164   important -> adr important
Rule 165   important -> mo important
Rule 166   important -> gen_table important
Rule 167   important -> gen_com important
Rule 168   important -> gen_abs important
Rule 169   gen_list -> OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
Rule 170   item -> OPEN_LIST_ITEM newlist CLOSE_LIST_ITEM
Rule 171   newlist -> gen_important
Rule 172   newlist -> gen_para
Rule 173   newlist -> gen_simp
Rule 174   newlist -> gen_list
Rule 175   newlist -> gen_table
Rule 176   newlist -> mo
Rule 177   newlist -> gen_com
Rule 178   newlist -> gen_abs
Rule 179   newlist -> gen_important newlist
Rule 180   newlist -> gen_para newlist
Rule 181   newlist -> gen_simp newlist
Rule 182   newlist -> gen_list newlist
Rule 183   newlist -> gen_table newlist
Rule 184   newlist -> mo newlist
Rule 185   newlist -> gen_com newlist
Rule 186   newlist -> gen_abs newlist
Rule 187   mo -> OPEN_MEDIA j CLOSE_MEDIA
Rule 188   j -> OPEN_INFO info CLOSE_INFO video r
Rule 189   j -> OPEN_INFO info CLOSE_INFO image r
Rule 190   j -> OPEN_VIDEO_OBJECT info OPEN_VIDEO_DATA VIDEO_DATA CLOSE_MEDBRAC CLOSE_VIDEO_DATA CLOSE_VIDEO_OBJECT
Rule 191   j -> OPEN_VIDEO_OBJECT OPEN_VIDEO_DATA VIDEO_DATA CLOSE_MEDBRAC CLOSE_VIDEO_DATA CLOSE_VIDEO_OBJECT
Rule 192   j -> OPEN_IMAGE_OBJECT info OPEN_IMAGEDATA CLOSE_MEDBRAC IMAGE_DATA CLOSE_IMAGE_OBJECT
Rule 193   j -> OPEN_IMAGE_OBJECT OPEN_IMAGEDATA IMAGE_DATA CLOSE_MEDBRAC CLOSE_IMAGE_DATA CLOSE_IMAGE_OBJECT
Rule 194   r -> image
Rule 195   r -> video
Rule 196   r -> image r
Rule 197   r -> video r
Rule 198   video -> OPEN_VIDEO_OBJECT info OPEN_VIDEO_DATA VIDEO_DATA CLOSE_MEDBRAC CLOSE_VIDEO_DATA CLOSE_VIDEO_OBJECT
Rule 199   video -> OPEN_VIDEO_OBJECT OPEN_VIDEO_DATA VIDEO_DATA CLOSE_MEDBRAC CLOSE_VIDEO_DATA CLOSE_VIDEO_OBJECT
Rule 200   image -> OPEN_IMAGE_OBJECT info OPEN_IMAGEDATA CLOSE_MEDBRAC IMAGE_DATA CLOSE_IMAGE_OBJECT
Rule 201   image -> OPEN_IMAGE_OBJECT OPEN_IMAGEDATA IMAGE_DATA CLOSE_MEDBRAC CLOSE_IMAGE_DATA CLOSE_IMAGE_OBJECT
Rule 202   gen_listitem -> OPEN_ITEMIZED_LIST conex3 CLOSE_ITEMIZED_LIST
Rule 203   conex3 -> fin
Rule 204   conex3 -> conex3 fin
Rule 205   fin -> gen_important
Rule 206   fin -> gen_para
Rule 207   fin -> gen_simp
Rule 208   fin -> adr
Rule 209   fin -> gen_listitem
Rule 210   fin -> mo
Rule 211   fin -> gen_table
Rule 212   fin -> gen_com
Rule 213   fin -> gen_abs
Rule 214   fin -> gen_important conex3
Rule 215   fin -> gen_para conex3
Rule 216   fin -> gen_simp conex3
Rule 217   fin -> adr conex3
Rule 218   fin -> gen_listitem conex3
Rule 219   fin -> mo conex3
Rule 220   fin -> gen_table conex3
Rule 221   fin -> gen_com conex3
Rule 222   fin -> gen_abs conex3
Rule 223   gen_table -> OPEN_TABLE inf_tb CLOSE_TABLE
Rule 224   inf_tb -> mo
Rule 225   inf_tb -> t_group
Rule 226   inf_tb -> mo inf_tb
Rule 227   inf_tb -> t_group inf_tb
Rule 228   t_group -> OPEN_T_GROUP gen_tgroup CLOSE_T_GROUP
Rule 229   gen_tgroup -> t_head t_body t_foot
Rule 230   gen_tgroup -> t_body t_foot
Rule 231   gen_tgroup -> t_head t_body
Rule 232   gen_tgroup -> t_body
Rule 233   t_head -> OPEN_HEAD row CLOSE_HEAD
Rule 234   t_body -> OPEN_BODY row CLOSE_BODY
Rule 235   t_foot -> OPEN_FOOT row CLOSE_FOOT
Rule 236   row -> OPEN_ROW entry CLOSE_ROW row
Rule 237   row -> OPEN_ROW entry CLOSE_ROW
Rule 238   row -> OPEN_ROW entry_tb CLOSE_ROW
Rule 239   row -> OPEN_ROW entry_tb CLOSE_ROW row
Rule 240   entry_tb -> OPEN_ENTRYTBL t_head t_body CLOSE_ENTRYTBL
Rule 241   entry -> OPEN_ENTRY gen_entry CLOSE_ENTRY
Rule 242   gen_entry -> TEXTO gen_entry
Rule 243   gen_entry -> OPEN_ITEMIZED_LIST
Rule 244   gen_entry -> gen_important
Rule 245   gen_entry -> gen_para
Rule 246   gen_entry -> gen_simp
Rule 247   gen_entry -> mo
Rule 248   gen_entry -> gen_com
Rule 249   gen_entry -> gen_abs
Rule 250   gen_entry -> TEXTO
Rule 251   gen_entry -> gen_listitem gen_entry
Rule 252   gen_entry -> gen_important gen_entry
Rule 253   gen_entry -> gen_para gen_entry
Rule 254   gen_entry -> gen_simp gen_entry
Rule 255   gen_entry -> mo gen_entry
Rule 256   gen_entry -> gen_com gen_entry
Rule 257   gen_entry -> gen_abs gen_entry

Terminals, with rules where they appear

CLOSE_ABSTRACT       : 54 55
CLOSE_ADDRESS        : 60 61
CLOSE_ARTICLE        : 2
CLOSE_AUTHOR         : 75
CLOSE_BODY           : 234
CLOSE_CITY           : 86
CLOSE_COMMENT        : 113
CLOSE_COPYRIGHT      : 80
CLOSE_DATE           : 90
CLOSE_EMAIL          : 89
CLOSE_EMPHASIS       : 111
CLOSE_ENTRY          : 241
CLOSE_ENTRYTBL       : 240
CLOSE_FIRST_NAME     : 83
CLOSE_FOOT           : 235
CLOSE_HEAD           : 233
CLOSE_HOLDER         : 92
CLOSE_IMAGE_DATA     : 193 201
CLOSE_IMAGE_OBJECT   : 192 193 200 201
CLOSE_IMPORTANT      : 149 150
CLOSE_INFO           : 39 188 189
CLOSE_ITEMIZED_LIST  : 169 202
CLOSE_LINK           : 112
CLOSE_LIST_ITEM      : 170
CLOSE_MEDBRAC        : 190 191 192 193 198 199 200 201
CLOSE_MEDIA          : 187
CLOSE_PARA           : 126
CLOSE_PHONE          : 88
CLOSE_ROW            : 236 237 238 239
CLOSE_SECTION        : 32
CLOSE_SIMPARA        : 110
CLOSE_SIMPLE_SECTION : 33
CLOSE_STATE          : 87
CLOSE_STREET         : 85
CLOSE_SURNAME        : 84
CLOSE_TABLE          : 223
CLOSE_TITLE          : 101
CLOSE_T_GROUP        : 228
CLOSE_VIDEO_DATA     : 190 191 198 199
CLOSE_VIDEO_OBJECT   : 190 191 198 199
CLOSE_YEAR           : 91
DOCTYPE              : 1
IMAGE_DATA           : 192 193 200 201
OPEN_ABSTRACT        : 54 55
OPEN_ADDRESS         : 60 61
OPEN_ARTICLE         : 2
OPEN_AUTHOR          : 75
OPEN_BODY            : 234
OPEN_CITY            : 86
OPEN_COMMENT         : 113
OPEN_COPYRIGHT       : 80
OPEN_DATE            : 90
OPEN_EMAIL           : 89
OPEN_EMPHASIS        : 111
OPEN_ENTRY           : 241
OPEN_ENTRYTBL        : 240
OPEN_FIRST_NAME      : 83
OPEN_FOOT            : 235
OPEN_HEAD            : 233
OPEN_HOLDER          : 92
OPEN_IMAGEDATA       : 192 193 200 201
OPEN_IMAGE_OBJECT    : 192 193 200 201
OPEN_IMPORTANT       : 149 150
OPEN_INFO            : 39 188 189
OPEN_ITEMIZED_LIST   : 169 202 243
OPEN_LINK            : 112
OPEN_LIST_ITEM       : 170
OPEN_MEDIA           : 187
OPEN_PARA            : 126
OPEN_PHONE           : 88
OPEN_ROW             : 236 237 238 239
OPEN_SECTION         : 32
OPEN_SIMPARA         : 110
OPEN_SIMPLE_SECTION  : 33
OPEN_STATE           : 87
OPEN_STREET          : 85
OPEN_SURNAME         : 84
OPEN_TABLE           : 223
OPEN_TITLE           : 101
OPEN_T_GROUP         : 228
OPEN_VIDEO_DATA      : 190 191 198 199
OPEN_VIDEO_OBJECT    : 190 191 198 199
OPEN_YEAR            : 91
TEXTO                : 74 93 97 102 106 114 121 127 138 242 250
URL                  : 
VIDEO_DATA           : 190 191 198 199
error                : 

Nonterminals, with rules where they appear

adr                  : 14 23 42 49 135 146 155 164 208 217
aut                  : 75 78 79
conex                : 110 111 112 113 120 121 122 123 124 125
conex3               : 202 204 214 215 216 217 218 219 220 221 222
cont_tit             : 101 106 107 108 109
copy                 : 80
entry                : 236 237
entry_tb             : 238 239
fin                  : 203 204
gen_abs              : 18 27 41 48 159 168 178 186 213 222 249 257
gen_allart           : 2 32
gen_article          : 1
gen_aut              : 43 50 118 124 131 142
gen_city             : 64 70
gen_com              : 17 26 96 100 119 125 132 143 158 167 177 185 212 221 248 256
gen_copy             : 45 52
gen_data             : 3 4 5 6 7 8 9 19 20 21 22 23 24 25 26 27 34 35 36 37 38
gen_date             : 44 51
gen_email            : 66 72 105 108 117 123 130 141
gen_emp              : 95 99 103 107 115 120 129 140
gen_entry            : 241 242 251 252 253 254 255 256 257
gen_firstn           : 76 78
gen_holder           : 82
gen_important        : 11 20 134 145 152 161 171 179 205 214 244 252
gen_info             : 3 4 9 34 35
gen_link             : 94 98 104 109 116 122 128 139
gen_list             : 10 19 133 144 151 160 174 182
gen_listitem         : 209 218 251
gen_para             : 12 21 56 58 153 162 172 180 206 215 245 253
gen_phone            : 65 71
gen_secciones        : 3 4 5 6 28 29 36
gen_section          : 28 30
gen_simp             : 13 22 57 59 154 163 173 181 207 216 246 254
gen_simpsec          : 29 31
gen_state            : 63 69
gen_street           : 62 68
gen_surn             : 77 79
gen_table            : 16 25 137 148 157 166 175 183 211 220
gen_tgroup           : 228
gen_titl             : 3 5 7 34 37 46 53 54 149
gen_year             : 81 82
genad                : 60 68 69 70 71 72 73
genall               : 83 84 85 86 87 88 89 90 91 92 97 98 99 100
image                : 189 194 196
important            : 149 150 160 161 162 163 164 165 166 167 168
imprimir             : 61 67 73
inf_tb               : 223 226 227
info                 : 39 47 48 49 50 51 52 53 188 189 190 192 198 200
infoab               : 54 55 58 59
inicio               : 0
item                 : 169
j                    : 187
mo                   : 15 24 40 47 136 147 156 165 176 184 210 219 224 226 247 255
newlist              : 170 179 180 181 182 183 184 185 186
op_para              : 126 138 139 140 141 142 143 144 145 146 147 148
r                    : 188 189 196 197
row                  : 233 234 235 236 239
simpsec              : 33
t_body               : 229 230 231 232 240
t_foot               : 229 230
t_group              : 225 227
t_head               : 229 231 240
video                : 188 195 197

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . DOCTYPE gen_article

    DOCTYPE         shift and go to state 2

    inicio                         shift and go to state 1

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> DOCTYPE . gen_article
    (2) gen_article -> . OPEN_ARTICLE gen_allart CLOSE_ARTICLE

    OPEN_ARTICLE    shift and go to state 4

    gen_article                    shift and go to state 3

state 3

    (1) inicio -> DOCTYPE gen_article .

    $end            reduce using rule 1 (inicio -> DOCTYPE gen_article .)


state 4

    (2) gen_article -> OPEN_ARTICLE . gen_allart CLOSE_ARTICLE
    (3) gen_allart -> . gen_info gen_titl gen_data gen_secciones
    (4) gen_allart -> . gen_info gen_data gen_secciones
    (5) gen_allart -> . gen_titl gen_data gen_secciones
    (6) gen_allart -> . gen_data gen_secciones
    (7) gen_allart -> . gen_titl gen_data
    (8) gen_allart -> . gen_data
    (9) gen_allart -> . gen_info gen_data
    (39) gen_info -> . OPEN_INFO info CLOSE_INFO
    (101) gen_titl -> . OPEN_TITLE cont_tit CLOSE_TITLE
    (10) gen_data -> . gen_list
    (11) gen_data -> . gen_important
    (12) gen_data -> . gen_para
    (13) gen_data -> . gen_simp
    (14) gen_data -> . adr
    (15) gen_data -> . mo
    (16) gen_data -> . gen_table
    (17) gen_data -> . gen_com
    (18) gen_data -> . gen_abs
    (19) gen_data -> . gen_list gen_data
    (20) gen_data -> . gen_important gen_data
    (21) gen_data -> . gen_para gen_data
    (22) gen_data -> . gen_simp gen_data
    (23) gen_data -> . adr gen_data
    (24) gen_data -> . mo gen_data
    (25) gen_data -> . gen_table gen_data
    (26) gen_data -> . gen_com gen_data
    (27) gen_data -> . gen_abs gen_data
    (169) gen_list -> . OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
    (149) gen_important -> . OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
    (150) gen_important -> . OPEN_IMPORTANT important CLOSE_IMPORTANT
    (126) gen_para -> . OPEN_PARA op_para CLOSE_PARA
    (110) gen_simp -> . OPEN_SIMPARA conex CLOSE_SIMPARA
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS imprimir CLOSE_ADDRESS
    (187) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (223) gen_table -> . OPEN_TABLE inf_tb CLOSE_TABLE
    (113) gen_com -> . OPEN_COMMENT conex CLOSE_COMMENT
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT

    OPEN_INFO       shift and go to state 9
    OPEN_TITLE      shift and go to state 10
    OPEN_ITEMIZED_LIST shift and go to state 20
    OPEN_IMPORTANT  shift and go to state 21
    OPEN_PARA       shift and go to state 22
    OPEN_SIMPARA    shift and go to state 23
    OPEN_ADDRESS    shift and go to state 24
    OPEN_MEDIA      shift and go to state 25
    OPEN_TABLE      shift and go to state 26
    OPEN_COMMENT    shift and go to state 27
    OPEN_ABSTRACT   shift and go to state 28

    gen_allart                     shift and go to state 5
    gen_info                       shift and go to state 6
    gen_titl                       shift and go to state 7
    gen_data                       shift and go to state 8
    gen_list                       shift and go to state 11
    gen_important                  shift and go to state 12
    gen_para                       shift and go to state 13
    gen_simp                       shift and go to state 14
    adr                            shift and go to state 15
    mo                             shift and go to state 16
    gen_table                      shift and go to state 17
    gen_com                        shift and go to state 18
    gen_abs                        shift and go to state 19

state 5

    (2) gen_article -> OPEN_ARTICLE gen_allart . CLOSE_ARTICLE

    CLOSE_ARTICLE   shift and go to state 29


state 6

    (3) gen_allart -> gen_info . gen_titl gen_data gen_secciones
    (4) gen_allart -> gen_info . gen_data gen_secciones
    (9) gen_allart -> gen_info . gen_data
    (101) gen_titl -> . OPEN_TITLE cont_tit CLOSE_TITLE
    (10) gen_data -> . gen_list
    (11) gen_data -> . gen_important
    (12) gen_data -> . gen_para
    (13) gen_data -> . gen_simp
    (14) gen_data -> . adr
    (15) gen_data -> . mo
    (16) gen_data -> . gen_table
    (17) gen_data -> . gen_com
    (18) gen_data -> . gen_abs
    (19) gen_data -> . gen_list gen_data
    (20) gen_data -> . gen_important gen_data
    (21) gen_data -> . gen_para gen_data
    (22) gen_data -> . gen_simp gen_data
    (23) gen_data -> . adr gen_data
    (24) gen_data -> . mo gen_data
    (25) gen_data -> . gen_table gen_data
    (26) gen_data -> . gen_com gen_data
    (27) gen_data -> . gen_abs gen_data
    (169) gen_list -> . OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
    (149) gen_important -> . OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
    (150) gen_important -> . OPEN_IMPORTANT important CLOSE_IMPORTANT
    (126) gen_para -> . OPEN_PARA op_para CLOSE_PARA
    (110) gen_simp -> . OPEN_SIMPARA conex CLOSE_SIMPARA
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS imprimir CLOSE_ADDRESS
    (187) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (223) gen_table -> . OPEN_TABLE inf_tb CLOSE_TABLE
    (113) gen_com -> . OPEN_COMMENT conex CLOSE_COMMENT
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT

    OPEN_TITLE      shift and go to state 10
    OPEN_ITEMIZED_LIST shift and go to state 20
    OPEN_IMPORTANT  shift and go to state 21
    OPEN_PARA       shift and go to state 22
    OPEN_SIMPARA    shift and go to state 23
    OPEN_ADDRESS    shift and go to state 24
    OPEN_MEDIA      shift and go to state 25
    OPEN_TABLE      shift and go to state 26
    OPEN_COMMENT    shift and go to state 27
    OPEN_ABSTRACT   shift and go to state 28

    gen_titl                       shift and go to state 30
    gen_data                       shift and go to state 31
    gen_list                       shift and go to state 11
    gen_important                  shift and go to state 12
    gen_para                       shift and go to state 13
    gen_simp                       shift and go to state 14
    adr                            shift and go to state 15
    mo                             shift and go to state 16
    gen_table                      shift and go to state 17
    gen_com                        shift and go to state 18
    gen_abs                        shift and go to state 19

state 7

    (5) gen_allart -> gen_titl . gen_data gen_secciones
    (7) gen_allart -> gen_titl . gen_data
    (10) gen_data -> . gen_list
    (11) gen_data -> . gen_important
    (12) gen_data -> . gen_para
    (13) gen_data -> . gen_simp
    (14) gen_data -> . adr
    (15) gen_data -> . mo
    (16) gen_data -> . gen_table
    (17) gen_data -> . gen_com
    (18) gen_data -> . gen_abs
    (19) gen_data -> . gen_list gen_data
    (20) gen_data -> . gen_important gen_data
    (21) gen_data -> . gen_para gen_data
    (22) gen_data -> . gen_simp gen_data
    (23) gen_data -> . adr gen_data
    (24) gen_data -> . mo gen_data
    (25) gen_data -> . gen_table gen_data
    (26) gen_data -> . gen_com gen_data
    (27) gen_data -> . gen_abs gen_data
    (169) gen_list -> . OPEN_ITEMIZED_LIST item CLOSE_ITEMIZED_LIST
    (149) gen_important -> . OPEN_IMPORTANT gen_titl important CLOSE_IMPORTANT
    (150) gen_important -> . OPEN_IMPORTANT important CLOSE_IMPORTANT
    (126) gen_para -> . OPEN_PARA op_para CLOSE_PARA
    (110) gen_simp -> . OPEN_SIMPARA conex CLOSE_SIMPARA
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS imprimir CLOSE_ADDRESS
    (187) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (223) gen_table -> . OPEN_TABLE inf_tb CLOSE_TABLE
    (113) gen_com -> . OPEN_COMMENT conex CLOSE_COMMENT
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT

    OPEN_ITEMIZED_LIST shift and go to state 20
    OPEN_IMPORTANT  shift and go to state 21
    OPEN_PARA       shift and go to state 22
    OPEN_SIMPARA    shift and go to state 23
    OPEN_ADDRESS    shift and go to state 24
    OPEN_MEDIA      shift and go to state 25
    OPEN_TABLE      shift and go to state 26
    OPEN_COMMENT    shift and go to state 27
    OPEN_ABSTRACT   shift and go to state 28

    gen_data                       shift and go to state 32
    gen_list                       shift and go to state 11
    gen_important                  shift and go to state 12
    gen_para                       shift and go to state 13
    gen_simp                       shift and go to state 14
    adr                            shift and go to state 15
    mo                             shift and go to state 16
    gen_table                      shift and go to state 17
    gen_com                        shift and go to state 18
    gen_abs                        shift and go to state 19

state 8

    (6) gen_allart -> gen_data . gen_secciones
    (8) gen_allart -> gen_data .
    (28) gen_secciones -> . gen_section gen_secciones
    (29) gen_secciones -> . gen_simpsec gen_secciones
    (30) gen_secciones -> . gen_section
    (31) gen_secciones -> . gen_simpsec
    (32) gen_section -> . OPEN_SECTION gen_allart CLOSE_SECTION
    (33) gen_simpsec -> . OPEN_SIMPLE_SECTION simpsec CLOSE_SIMPLE_SECTION

    CLOSE_ARTICLE   reduce using rule 8 (gen_allart -> gen_data .)
    CLOSE_SECTION   reduce using rule 8 (gen_allart -> gen_data .)
    OPEN_SECTION    shift and go to state 36
    OPEN_SIMPLE_SECTION shift and go to state 37

    gen_secciones                  shift and go to state 33
    gen_section                    shift and go to state 34
    gen_simpsec                    shift and go to state 35

state 9

    (39) gen_info -> OPEN_INFO . info CLOSE_INFO
    (40) info -> . mo
    (41) info -> . gen_abs
    (42) info -> . adr
    (43) info -> . gen_aut
    (44) info -> . gen_date
    (45) info -> . gen_copy
    (46) info -> . gen_titl
    (47) info -> . mo info
    (48) info -> . gen_abs info
    (49) info -> . adr info
    (50) info -> . gen_aut info
    (51) info -> . gen_date info
    (52) info -> . gen_copy info
    (53) info -> . gen_titl info
    (187) mo -> . OPEN_MEDIA j CLOSE_MEDIA
    (54) gen_abs -> . OPEN_ABSTRACT gen_titl infoab CLOSE_ABSTRACT
    (55) gen_abs -> . OPEN_ABSTRACT infoab CLOSE_ABSTRACT
    (60) adr -> . OPEN_ADDRESS genad CLOSE_ADDRESS
    (61) adr -> . OPEN_ADDRESS imprimir CLOSE_ADDRESS
    (75) gen_aut -> . OPEN_AUTHOR aut CLOSE_AUTHOR
    (90) gen_date -> . OPEN_DATE genall CLOSE_DATE
    (80) gen_copy -> . OPEN_COPYRIGHT copy CLOSE_COPYRIGHT
    (101) gen_titl -> . OPEN_TITLE cont_tit CLOSE_TITLE

    OPEN_MEDIA      shift and go to state 25
    OPEN_ABSTRACT   shift and go to state 28
    OPEN_ADDRESS    shift and go to state 24
    OPEN_AUTHOR     shift and go to state 46
    OPEN_DATE       shift and go to state 47
    OPEN_COPYRIGHT  shift and go to state 48
    OPEN_TITLE      shift and go to state 10

    info                           shift and go to state 38
    mo                             shift and go to state 39
    gen_abs                        shift and go to state 40
    adr                            shift and go to state 41
    gen_aut                        shift and go to state 42
    gen_date                       shift and go to state 43
    gen_copy                       shift and go to state 44
    gen_titl                       shift and go to state 45

state 10

    (101) gen_titl -> OPEN_TITLE . cont_tit CLOSE_TITLE
    (102) cont_tit -> . TEXTO
    (103) cont_tit -> . gen_emp
    (104) cont_tit -> . gen_link
    (105) cont_tit -> . gen_email
    (106) cont_tit -> . TEXTO cont_tit
    (107) cont_tit -> . gen_emp cont_tit
    (108) cont_tit -> . gen_email cont_tit
    (109) cont_tit -> . gen_link cont_tit
    (111) gen_emp -> . OPEN_EMPHASIS conex CLOSE_EMPHASIS
    (112) gen_link -> . OPEN_LINK conex CLOSE_LINK
    (89) gen_email -> . OPEN_EMAIL genall CLOSE_EMAIL

    TEXTO           shift and go to state 50
    OPEN_EMPHASIS   shift and go to state 54
    OPEN_LINK       shift and go to state 55
    OPEN_EMAIL      shift and go to state 56

    cont_tit                       shift and go to state 49
    gen_emp                        shift and go to state 51
    gen_link                       shift and go to state 52
    gen_email                      shift and go to state 53

state 11
